--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ markers =
     login_guest: marker for login_quest tests
     quest_basket: marker for basket_quest tests
     user_basket: marker for user_basket tests
+    need_review: marker for tests that are need review
